tests/ui/const-generics/kind_mismatch.stderr
error[E0747]: type provided when a constant was expected
  --> $DIR/kind_mismatch.rs:11:38
   |
LL | impl<K> ContainsKey<K> for KeyHolder<K> {}
   |      -                               ^
   |      |
   |      help: consider changing this type parameter to a const parameter: `const K: u8`

error[E0747]: type provided when a constant was expected
  --> $DIR/kind_mismatch.rs:11:21
   |
LL | impl<K> ContainsKey<K> for KeyHolder<K> {}
   |      -              ^
   |      |
   |      help: consider changing this type parameter to a const parameter: `const K: u8`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0747`.
